[package]
name = "oo-log"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
http = "1.2.0"
linemux = "0.3"
log = "0.4.22"
reqwest = "0.12.12"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
